# CnC_Generals_Zero_Hour_Modernized

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
Generals/: CMakeLists.txt
Generals/Code/: CMakeLists.txt
Generals/Code/GameEngine/: CMakeLists.txt
Generals/Code/GameEngine/Include/Common/: AsciiString.h  BitFlags.h  CRC.h  CriticalSection.h  GameMemory.h  INIException.h  String.h  Thing.h  URLLaunch.h  UnicodeString.h
Generals/Code/GameEngine/Include/Precompiled/: PreRTS.h
Generals/Code/GameEngine/Source/Common/Audio/: URLLaunch.cpp
Generals/Code/GameEngine/Source/Common/System/: AsciiString.cpp  GameCommon.cpp  GameMemory.cpp  String.cpp  UnicodeString.cpp
Generals/Code/Libraries/Include/Lib/: BaseType.h
cmake/: CommonFunctions.cmake  Vendored.cmake
